# StickFuckTheMod

./: LICENSE.txt
StickFuckTheMod/: .envrc  .gitignore  Plugin.cs  StickFuckTheMod.csproj
StickFuckTheMod/Patches/: ControllerPatches.cs  GameManager.cs
StickFuckTheNativeConnector/: .gitignore  Cargo.toml  flake.nix
StickFuckTheNativeConnector/src/: main.rs
