[package]
name = "stickfuck-native"
version = "1.0.1"
edition = "2021"

[dependencies]
buttplug = { version = "7.1.13", features = ["client", "websockets", "tokio-runtime"], default-features = false }
clap = { version = "4.5.2", features = ["derive"] }
dirs-sys = "0.4.1"
miette = { version = "7.2.0", features = ["fancy"] }
tokio = { version = "1.36.0", features = ["net", "rt", "macros", "rt-multi-thread", "fs"] }
tracing-subscriber = "0.3.18"
